# azure-uamqp-python

./: .gitignore  .travis.yaml  .travis.yml  HISTORY.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  build_armv7l.sh  build_linux_sdist.sh  build_many_linux  build_many_linux.sh  build_many_linux_32bit  build_many_linux_32bit.sh  build_many_linux_64bit  build_many_linux_64bit.sh  build_openssl_armv7l.sh  build_openssl_osx.sh  build_osx.sh  conftest.py  dev_requirements.txt  developer_guide.md  install_python_osx.sh  iot_requirements.txt  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_win.py  setup_wip.py  test_cbs.py  test_mgmt_ops.py  test_new.py  test_new_async.py  test_perf.py
.azure-pipelines/: client.openssl.yml  client.test.live.yml  client.yml  eh-sb-vars.yml  install_python_version.py  pyproto-ci.yml  pyproto-live-test-template.yml  pyproto.test.live.yml  test-eh-sb-sdk.yml  test-proxy-tool.yml  use-python-version.yml  wrapped-use-python.yml
inc/: c_amqp_definitions.pxd  c_amqp_management.pxd  c_amqpvalue.pxd  c_async_operation.pxd  c_cbs.pxd  c_connection.pxd  c_link.pxd  c_message.pxd  c_message_receiver.pxd  c_message_sender.pxd  c_platform.pxd  c_sasl_mechanism.pxd  c_session.pxd  c_strings.pxd  c_tlsio.pxd  c_tlsio_openssl.pxd  c_utils.pxd  c_xio.pxd  c_xlogging.pxd
legacy_test/: test_old.py  test_perf.py
samples/: azure_event_hubs_client_send.py  conftest.py  sample_azure_event_hubs_receive.py  sample_azure_event_hubs_send.py  sample_uamqp_authenticate_client_by_jwt.py  sample_uamqp_receive_simple.py  sample_uamqp_send_simple.py  test_azure_event_hubs_mgmt_op.py  test_azure_event_hubs_mgmt_op_async.py  test_azure_event_hubs_receive.py  test_azure_event_hubs_receive_async.py  test_azure_event_hubs_send.py  test_azure_event_hubs_send_async.py  test_azure_iothub_cli_extension.py  test_azure_iothub_receive.py  test_azure_iothub_receive2.py  test_azure_iothub_receive_async.py  test_azure_iothub_send.py  test_azure_iothub_send_async.py  test_rabbitmq_send.py
src/: amqp_definitions.pyx  amqp_management.pyx  amqp_string.pyx  amqpvalue.pyx  annotations.pyx  async_operation.pyx  base.pyx  cbs.pyx  connection.pyx  constants.pyx  error.pyx  header.pyx  link.pyx  message.pyx  message_receiver.pyx  message_sender.pyx  platform.pyx  properties.pyx  sasl.pyx  session.pyx  source.pyx  target.pyx  tlsio.pyx  tlsio_openssl.pyx  wsio.pyx  xio.pyx  xlogging.pyx
tests/: test_c_amqpvalue.py  test_c_definitions.py  test_c_message.py  test_c_messaging.py  test_c_types.py  test_cbs_authentication.py  test_client.py  test_decode.py  test_encode.py  test_loop_param.py  test_message.py  test_mgmt_requests.py  test_receive.py  test_send.py  test_websocket.py
uamqp/: __init__.py  _compat.py  _connection.py  _decode.py  _decode_frame.py  _encode.py  _error.py  _performatives.py  _platform.py  _transport.py  address.py  amqp_types.py  authentication.py  cbs.py  client.py  compat.py  connection.py  constants.py  definitions.py  endpoints.py  endpoints_tuple.py  error.py  errors.py  link.py  management_link.py  management_operation.py  message.py  message_tuple.py  mgmt_operation.py  outcomes.py  outcomes_tuple.py  performatives.py  performatives_tuple.py  receiver.py  (+7 more)
(+93 files in other folders)
